src/App.css
/* GOOGLE FONT */
@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');

/* KEYFRAMES */
@-webkit-keyframes fadeIn{
  from{opacity: 0;}
  to{opacity: 1;}
}

@-moz-keyframes fadeIn{
  from{opacity: 0;}
  to{opacity: 1;}
}

@-o-keyframes fadeIn{
  from{opacity: 0;}
  to{opacity: 1;}
}

@keyframes fadeIn{
  from{opacity: 0;}
  to{opacity: 1;}
}


html, body {
  margin: 0;
}

/* Hide scrollbar for Chrome, Safari and Opera */
body::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
body {
  -ms-overflow-style: none;  /* IE and Edge */
  scrollbar-width: none;  /* Firefox */
}

/* NAVBAR */

.navbar {
  background-color: black;
  font-family: 'Amatic SC', cursive;
  font-size: 1.2em;
}

.navbar-container {
  width: 100vw;
  display: flex;
  justify-content: right;
  position: fixed;
  margin-top: 0px;
  z-index: 1;
  background-color: black;
  top: 0;
}

.navbar-container > .navbar-logo {
  width: 10%;
}

.nav-menu {
  display: flex;
  justify-content:center;
  width: 80%;
  margin: 0;
  list-style: none;
}

.nav-menu > .link-text {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  transition: 0.7s;
  width: 16rem;
  height: 100%;
  margin: 0;
}

.link-text > a {
  width: 100%;
  height: 100%;
  color: white;
  text-decoration: none;
  letter-spacing: 3px;
  font-size: 32px;
  padding-top: 25%;
}

.link-text:hover {
  background-color: rgb(46, 46, 46);
}

.navbar-container > a > h3 {
  text-align: center;
}

.nav-icon {
  display: none;
}

/* HERO */

.hero-button{
  border: none;
  position: absolute;
  background: transparent;
  color: rgb(70, 68, 68);
  width: 250px;
  height: 50px;
  font-size: 2em;
  opacity: .5;
  top: 60vh;
  bottom: 0px;
  left: 0px;
  right: 0px;
  margin: auto;
  transition: .3s;
}

.hero-button:hover{
  cursor: pointer;
  opacity: .8;
}

.box-wrapper {
  overflow: auto;
  width: 60vw;
  height: auto;
  background-color: rgb(127, 126, 126);
  margin: 0 auto;
  margin-top: 15vh;
  -webkit-animation: fadeIn 1 2s ease-out;
  -moz-animation: fadeIn 1 2s ease-out;
  -o-animation: fadeIn 1 2s ease-out;
  animation: fadeIn 1 2s ease-out; 
  display: flex;
  flex-direction: column;
  padding: 50px;
}

.box-wrapper > h1 {
  font-family: 'Amatic SC', cursive;
}

.box-wrapper > .content {
  font-family: 'Roboto', sans-serif;
  text-align: center;
  line-height: 1.6;
}

/* ABOUT ME */
h2 {
  font-family: 'Amatic SC', cursive;
}

.selfie-div > img {
  float: right;
  border-radius: 60%;
  width: 300px;
  text-align: center;
  margin-left: 20px;
}

.text-div {
  width: 70%;
}

.certificate {
  width: 250px;
  border-radius: 15px 15px 0 0;
  opacity: 50%;
  transition: .4s;
}

.certificate:hover {
  opacity: 100%;
}

/* SKILLS */
.skills-icons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  margin: 50px 0;
}

.skills-icons > .single-icon {
  width: 90px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.single-icon > p {
  text-align: center;
}

.single-icon > svg {
  font-size: 40px;
}

.skills-text > ul {
  text-align: left;
  list-style-type: circle
}


/* CONTACT ME */

.icons-container {
  display: flex;
  justify-content: center;
  margin: 50px 0;
}

.icons-container > a {
  width: 75px;
  height: 65px;
  text-align: center;
}

.icons-container > a > .icons {
  transition: .3s;
  color:rgb(0, 0, 0);
  font-size: 40px;
}

.icons-container > a > .icons:hover {
  font-size: 50px;
  color:rgb(255, 255, 255);
}

.contactme-quote {
  color: white;
  text-align: center;
  font-family: 'Roboto', sans-serif;
  font-weight: 200;
  padding-top: 10vh;
  width: 60vw;
  margin: 0 auto;
}




/*----------------------------------------------RESPONSIVE----------------------------------------------------*/
@media screen and (max-width: 1024px) {
  .nav-icon {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    transform: translate(-100%, 60%);
    font-size: 1.8rem;
    cursor: pointer;
    color: white;
    z-index: 2;
  }

  .nav-menu {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    border-top: 1pxsolid #fff;
    position: absolute;
    left: -110%;
    opacity: 1;
  }

  .navbar-logo {
    display: none;
  }

  .nav-menu.active {
    background: #000000;
    left: 0px;
    opacity: 1;
    z-index: 1;
    padding: 50px 0 0 0;
    margin: 0;
  }

  .nav-menu.active > .link-text {
    width: 100%;
    padding: 3rem  0 3rem 0;
  }

  .link-text > a {
    margin: 0;
  }

  h1 {
    text-align: center;
  }


  .text-div {
    width: 100%;
  }

  .selfie-div > img {
    float: none;
    width: 200px;
    margin-left: 0px;
    margin-bottom: 23px;
  }

  .box-wrapper {
    padding: 10px;
    width: 90%;
  }
}

